src/src/app.css
#app {
  max-width: 1280px;
  margin: 0 auto;
  padding: 2rem;
  text-align: center;
  font-family: "space mono", monospace;
}

.nameTitle{
  font-size: 3rem;
  font-weight: 150;
}

.nameSubtitle{
  font-size: 1.5rem;
  font-weight: 100;
  margin-bottom: 1rem;
}

.avatarContainer{
  align-items: center;
  justify-content: center;
  display: flex;
}

#avatarElement{
  max-width: 256px;
  max-height: 256px;
  width: 70vw;
  height: 70vw;
}

.profile_description_card{
  margin-top: 2rem;
  padding: 1rem;
}
.profile_description_footer{
  width: 100%;
}

.social_link{
  margin-left: 0.25rem !important;
  margin-right: 0.25rem !important;
}

@media (max-width: 600px) {
  #app {
    padding: 0.5rem;
    padding-bottom: 1rem;
  }
}

